Работают опросы и статистика
обновление профиля